apps/arcs/iota/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-iota
  labels:
    sage.arc: "true"
    arc.name: "iota"
